// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerTree matches snapshots using default properties. 1`] = `

<div class="tm-layer-tree">
  <div style="pointer-events: auto;"
       data-react-beautiful-dnd-droppable="0"
  >
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="0"
         style="padding-left: 0px;"
    >
      <div style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px;"
           role="button"
           tabindex="0"
      >
      </div>
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generaterootradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="-1"
      >
        <div>
          ovnetzkarteschweiz
        </div>
        <div class="tm-layer-tree-arrow tm-layer-tree-arrow-expanded">
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="0"
         style="padding-left: 30px;"
    >
      <label class="tm-layer-tree-input tm-layer-tree-input-checkbox"
             tabindex="0"
      >
        <input type="checkbox"
               tabindex="-1"
               name="shortid.generateovnetzkarteschweizcheckbox"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          bahnhofplane
        </div>
        <div class="tm-layer-tree-arrow tm-layer-tree-arrow-expanded">
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="0"
         style="padding-left: 60px;"
    >
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generatebahnhofplaneradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          interaktivbahnhoplan
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="0"
         style="padding-left: 60px;"
    >
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generatebahnhofplaneradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          printprodukte
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="0"
         style="padding-left: 30px;"
    >
      <label class="tm-layer-tree-input tm-layer-tree-input-checkbox"
             tabindex="0"
      >
        <input type="checkbox"
               tabindex="-1"
               name="shortid.generateovnetzkarteschweizcheckbox"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          passagierfrequenzen
        </div>
        <div class="tm-layer-tree-arrow tm-layer-tree-arrow-collapsed">
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="0"
         style="padding-left: 0px;"
    >
      <div style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px;"
           role="button"
           tabindex="0"
      >
      </div>
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generaterootradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="-1"
      >
        <div>
          bauprojekte
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`LayerTree matches snapshots when an item is hidden. 1`] = `

<div class="tm-layer-tree">
  <div style="pointer-events: auto;"
       data-react-beautiful-dnd-droppable="3"
  >
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="3"
         style="padding-left: 0px;"
    >
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="3"
         style="padding-left: 30px;"
    >
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="3"
         style="padding-left: 60px;"
    >
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generatebahnhofplaneradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          interaktivbahnhoplan
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="3"
         style="padding-left: 60px;"
    >
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generatebahnhofplaneradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          printprodukte
        </div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="3"
         style="padding-left: 30px;"
    >
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="3"
         style="padding-left: 0px;"
    >
      <div style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px;"
           role="button"
           tabindex="0"
      >
      </div>
      <label class="tm-layer-tree-input tm-layer-tree-input-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generaterootradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button tm-layer-tree-toggle"
           role="button"
           style="display: flex;"
           tabindex="-1"
      >
        <div>
          bauprojekte
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`LayerTree matches snapshots when classNames are used. 1`] = `

<div class="foo">
  <div style="pointer-events: auto;"
       data-react-beautiful-dnd-droppable="2"
  >
    <div class="bar"
         data-react-beautiful-dnd-draggable="2"
         style="padding-left: 0px;"
    >
      <div style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px;"
           role="button"
           tabindex="0"
      >
      </div>
      <label class="qux qux-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generaterootradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button quux"
           role="button"
           style="display: flex;"
           tabindex="-1"
      >
        <div>
          ovnetzkarteschweiz
        </div>
        <div class="ged ged-expanded">
        </div>
      </div>
    </div>
    <div class="bar"
         data-react-beautiful-dnd-draggable="2"
         style="padding-left: 30px;"
    >
      <label class="qux qux-checkbox"
             tabindex="0"
      >
        <input type="checkbox"
               tabindex="-1"
               name="shortid.generateovnetzkarteschweizcheckbox"
        >
        <span>
        </span>
      </label>
      <div class="tm-button quux"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          bahnhofplane
        </div>
        <div class="ged ged-expanded">
        </div>
      </div>
    </div>
    <div class="bar"
         data-react-beautiful-dnd-draggable="2"
         style="padding-left: 60px;"
    >
      <label class="qux qux-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generatebahnhofplaneradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button quux"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          interaktivbahnhoplan
        </div>
      </div>
    </div>
    <div class="bar"
         data-react-beautiful-dnd-draggable="2"
         style="padding-left: 60px;"
    >
      <label class="qux qux-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generatebahnhofplaneradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button quux"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          printprodukte
        </div>
      </div>
    </div>
    <div class="bar"
         data-react-beautiful-dnd-draggable="2"
         style="padding-left: 30px;"
    >
      <label class="qux qux-checkbox"
             tabindex="0"
      >
        <input type="checkbox"
               tabindex="-1"
               name="shortid.generateovnetzkarteschweizcheckbox"
        >
        <span>
        </span>
      </label>
      <div class="tm-button quux"
           role="button"
           style="display: flex;"
           tabindex="0"
      >
        <div>
          passagierfrequenzen
        </div>
        <div class="ged ged-collapsed">
        </div>
      </div>
    </div>
    <div class="bar"
         data-react-beautiful-dnd-draggable="2"
         style="padding-left: 0px;"
    >
      <div style="position: absolute; margin: auto; top: 0px; left: 0px; bottom: 0px; right: 0px;"
           role="button"
           tabindex="0"
      >
      </div>
      <label class="qux qux-radio"
             tabindex="-1"
      >
        <input type="radio"
               tabindex="-1"
               name="shortid.generaterootradio"
        >
        <span>
        </span>
      </label>
      <div class="tm-button quux"
           role="button"
           style="display: flex;"
           tabindex="-1"
      >
        <div>
          bauprojekte
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`LayerTree matches snapshots when renderItem is used. 1`] = `

<div class="tm-layer-tree">
  <div style="pointer-events: auto;"
       data-react-beautiful-dnd-droppable="1"
  >
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="1"
         style="padding-left: 0px;"
    >
      <div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="1"
         style="padding-left: 30px;"
    >
      <div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="1"
         style="padding-left: 60px;"
    >
      <div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="1"
         style="padding-left: 60px;"
    >
      <div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="1"
         style="padding-left: 30px;"
    >
      <div>
      </div>
    </div>
    <div class="tm-layer-tree-item"
         data-react-beautiful-dnd-draggable="1"
         style="padding-left: 0px;"
    >
      <div>
      </div>
    </div>
  </div>
</div>

`;
